# settings

./: .gitignore  META  Makefile  Makefile.am  Makefile.in  VERSION  _tags  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.in  options.ml  options.mli  settings.ml  settings.mli  settings2.mlpack
config/: acinclude.m4
doc/: Makefile.am
regression/: Makefile.am  Makefile.in  test.ml
src/: Makefile.am  Makefile.in  options.ml  options.mli  settings.ml  settings.mli
testing/: test.ml
